# xilogism

./: .gitignore  README.md  auth_session.json  log.txt  logic_expression.json  nin.json  nouparser.py  parser.py  pyproject.toml  test.docx  test.json  tree.py  vs.py
src/: iconer.py  main.py  registration_ui.py  sidebar.py  splash.py  titlebar.py
src/assets/: auth.json  firebase_config.json  full.docx  light_mode_cropped.mov  no_margin.docx  no_titlebar.docx  plain.docx  pseudocode_parser.lark.txt  start.json
src/data/: colors.py  files.py  fonts.py
src/data/color_values/: cha_dark.py  cha_light.py  kaki_dark.py  kaki_light.py  nori_dark.py  nori_light.py  sakura_dark.py  sakura_light.py  sora_dark.py  sora_light.py  suna_dark.py  suna_light.py
src/gates/: and_gate.py  or_gate.py  xor_gate.py
src/lang/: __init__.py  brn.py  ceb.py  en.py  es.py  fr.py  ja.py  tl.py  zh.py
src/logic_circuit/: abstract_gate.py  canvas.py  input_node.py  output_node.py  wire.py
src/logic_circuit/gates/: and_gate.py  not_gate.py  or_gate.py  xor_gate.py
src/models/: font_model.py  user.py  xilo_file.py  xilofile_model.py
src/presentation/controllers/: __init__.py  accent_color_controller.py  active_file_controller.py  active_sidebar_button_controller.py  animation_disable_controller.py  auth_controller.py  color_blind_mode_controller.py  controller.py  custom_background_controller.py  dark_mode_controller.py  dialog_state_controller.py  dyslexia_friendly_controller.py  editor_content_state_controller.py  editor_theme_controller.py  editor_view_fonts_controller.py  expand_canvas_controller.py  export_controller.py  google_drive_controller.py  language_controller.py  left_handed_controller.py  render_controller.py  settings_navigator_controller.py  sidebar_hide_controller.py  theme_accent_controller.py  thumbnail_controller.py  title_buttons_controller.py  title_change_controller.py  window_controller.py  xilofiles_controller.py
src/presentation/states/: accent_color_state.py  active_file_state.py  active_font_state.py  active_sidebar_button_state.py  animation_disable_state.py  auth_state.py  bom_state.py  color_blind_state.py  custom_background_state.py  dark_mode_state.py  dialogs_state.py  drive_state.py  dyslexia_friendly_state.py  editor_content_state.py  editor_theme_state.py  expand_canvas_state.py  export_state.py  language_state.py  left_handed_state.py  media_query_state.py  new_save_state.py  render_state.py  settings_navigator_state.py  sidebar_hide_state.py  title_button_state.py  viewing_mode_state.py  xilofile_state.py
src/presentation/views/: editor_view.py  open_existing_view.py  start_view.py  window_view.py
src/presentation/views/dialogs/: bom_dialog.py  create_new_dialog.py  export_print_dialog.py  login_dialog.py  onboarding_dialog.py  profile_dialog.py  registration_dialog.py  settings_dialog.py  tutorial_dialog.py
src/presentation/views/dialogs/settings/: accessibility_settings.py  appearance_settings.py  (+2 more)
src/presentation/views/widgets/: dialog_navigator.py  navigator_button.py  settings_image_button.py  sidebar.py  titlebar.py
src/services/: ast_converter.py  ast_validator.py  auth_persistence.py  boolean_converter.py  boolean_to_circuit.py  fonts.py  init_files.py  init_fonts.py  new_pseudocode_parser.py  pseudo_parser.py  pseudocode_parser.py  pygenerator.py  validator.py
src/services/auth/: auth_persistence.py
src/services/init/: init_fonts.py  init_login.py
src/services/process_pipeline/: __init__.py  boolean_converter.py  pseudocode_parser.py  pygenerator.py
src/ui/views/: open_existing_view.py  start_view.py
src/ui/widgets/: sidebar.py  titlebar.py
src/ui/widgets/logic_circuit/: abstract_element.py  canvas.py  input_node.py  output_node.py
src/views/: editor_view.py  start_view.py
(+44 files in other folders)
